--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             </div>
             <div class="panel-body">
                 Section1 content
+				<h4>Systemy kontroli wersji</h4>
+				<a href="http://pl.wikipedia.org/wiki/System_kontroli_wersji">Wikipedia</a>
             </div>
             <footer class="panel-footer">
                 Section1 footer
