--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        	
+        	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     </head>
     <body>
         <nav class="navbar">
@@ -26,6 +26,8 @@
             </div>
             <div class="panel-body">
                 Section2 content
+				<h4>Rozproszony system kontroli wersji</h4>
+				<a href="http://git-scm.com/book/pl/Pierwsze-kroki-Wprowadzenie-do-kontroli-wersji#Rozproszone-systemy-kontroli-wersji">Git - podręcznik</a>
             </div>
             <footer class="panel-footer">
                 Section2 footer
